--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "engines": {
         "node": ">=20.0.0 <23.0.0"
     },
+    "type": "module",
     "scripts": {
         "start": "node src/server.js",
         "dev": "nodemon",
@@ -36,7 +37,7 @@
     "license": "MIT",
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@whiskeysockets/baileys": "^6.7.18",
+        "@whiskeysockets/baileys": "^6.7.19",
         "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^3.0.2",
