--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,8 @@ WEBHOOK_ALLOWED_EVENTS=messages,messages.upsert
 # MESSAGE CONFIGURATION
 # ==================================
 MARK_MESSAGES_READ=false
+
+# ==================================
+# SET VERSION WHATSAPP CONECTION
+# ==================================
+SET_VERSION_WHATSAPP="2,3000,1027934701"
