fix: show version dashboard

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ CLIENT_BROWSER='Chrome'
 CLIENT_VERSION='20.0.0'
 
 # ==================================
+# SET VERSION WHATSAPP CONECTION
+# ==================================
+SET_VERSION_WHATSAPP="2.3000.1028404774"
+
+# ==================================
 # INSTANCE CONFIGURATION
 # ==================================
 INSTANCE_MAX_RETRY_QR=2
@@ -51,8 +56,3 @@ WEBHOOK_ALLOWED_EVENTS=messages,messages.upsert
 # MESSAGE CONFIGURATION
 # ==================================
 MARK_MESSAGES_READ=false
-
-# ==================================
-# SET VERSION WHATSAPP CONECTION
-# ==================================
-SET_VERSION_WHATSAPP="2,3000,1027934701"
