--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "huboot-api",
-    "version": "1.2.5",
+    "version": "1.2.6",
     "description": "huboot-api is builton top of Baileys-MD.",
     "main": "server.js",
     "engines": {
@@ -37,7 +37,7 @@
     "license": "MIT",
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@whiskeysockets/baileys": "^6.7.21",
+        "@whiskeysockets/baileys": "^7.0.0-rc.4",
         "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^3.0.2",
